--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h2{
     align-content: center;
     justify-items: center;
     align-items: center;    
+   
 }
 
 .grid-logo-item{
@@ -111,6 +112,11 @@ h2{
 .grid__item{
    height:100%;
    width: 100%;
+   transition: transform 0.3s;
+}
+
+.grid__item:hover{
+    transform: rotate(5deg);
 }
 
 .grid__item-img{
@@ -159,6 +165,10 @@ h2{
     width: 50px;
     height: 50px;
     transition: transform 0.3s;
+}
+
+.estilo-a-footer:hover{
+    transform: translateY(-15px);
 }
 
 h4{
