--- a/css/style.css
+++ b/css/style.css
@@ -12,43 +12,29 @@ body {
     font-family: 'Marvel'
 }
 .parallax {
-    
     background-image: url('../assets/images/Wallpaper.jpg');
     background-size: 100%;
     background-attachment: fixed;
 }
 
 /* ----------------------------------------------------------------------------- */
+
+.grid__item{
+    transition: 0.3s;
+}
 .grid__item:hover{
     transform: rotate(5deg);
 }
 
 /* --------------------------footer------------------------------------------------------- */
-.footer {
-    
-    background-image: radial-gradient(circle, red, black);
-    text-align: center;
-    padding-top: 20px;
-    width: 100%;
-    height: 120px;
-}
+
 .estilo-a-footer{
-    width: 50px;
-    height: 50px;
+   
     transition: transform 0.3s;
 }
 
 .estilo-a-footer:hover{
     transform: translateY(-15px);
-}
-
-h4{
-    padding: 10px;
-}
-
-
-.section-table{
-    background-color: rgba(0, 0, 0, 0.5); 
 }
 
 .portada-peli{
@@ -57,38 +43,7 @@ h4{
     height: 170px;
 }
  
-/* ------------------------------------------Pag Contacto------------------------------------- */
-.font-contacto{
-    color: rgb(255, 255, 255);
-    font-size: 22;
-}
-.section-contacto{
-    width: 100%;
-    height: 500px;
-}
-.form {
-    width: 90%;
-    max-width: 600px;
-    margin: 0 auto;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  .form input {
-    width: 90%;
-    height: 30px;
-    margin: 0.5rem;
-  }
-  
-  .form button {
-    padding: 0.5em 1em;
-    border:  black;
-    margin-top: 10px;
-    background: rgba(255, 255, 255, 0.8);
-    cursor: pointer;
-  }  
+
 
 /* ------------------------------media---------------------------------------------------------- */
 
