Inicio y configuracion sass

--- a/css/style.css
+++ b/css/style.css
@@ -1,152 +1,2 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-@font-face {
-    font-family: Marvel;
-    src: url('../assets/fonts/kenyan\ coffee\ rg.ttf');
-    font-style: normal;
-}
 body {
-    font-family: 'Marvel'
-}
-.parallax {
-    background-image: url('../assets/images/Wallpaper.jpg');
-    background-size: 100%;
-    background-attachment: fixed;
-}
-
-/* ----------------------------------------------------------------------------- */
-
-.grid__item{
-    transition: 0.3s;
-}
-.grid__item:hover{
-    transform: rotate(5deg);
-}
-
-/* --------------------------footer------------------------------------------------------- */
-
-.estilo-a-footer{
-   
-    transition: transform 0.3s;
-}
-
-.estilo-a-footer:hover{
-    transform: translateY(-15px);
-}
-
-.portada-peli{
-    padding-top: 5px;
-    width: 120px;
-    height: 170px;
-}
- 
-
-
-/* ------------------------------media---------------------------------------------------------- */
-
-/* @media (max-width:1100px) {
-    .estilo-section-div1{
-        grid-template-columns: 500px 300px;
-    }
-    .estilo-section-div2{
-    grid-template-columns: 230px 230px 340px;
-    }
-    .grid-video-item{
-        margin: 1px;
-        width: 90%;
-        height: 90%;
-    }
-    .crono-item{
-        width: 300px; ;
-   }
-   
-}
-@media (max-width: 768px){
-    .estilo-section-div1{
-        grid-template-columns: 400px 250px;
-    }
-    .estilo-section-div2{
-    grid-template-columns: 180px 180px 290px;
-    }
-    .grid-video{
-        height: 550px;
-        grid-template-columns: 1fr;
-       align-items: center;
-       align-content: center;
-       justify-content: center;
-       justify-items: center;
-    }   
-
-   
-    .estilo-ul {
-        justify-content: center;
-        height: 40px;
-    }
-    .estilo-section-crono{
-       grid-template-columns: 1fr ;
-        
-    }
-    .crono-item{
-        width: 500px; ;
-   }
-   .footer {
-    height: 150px;
-   }
-    
-   
-}
-@media (max-width: 650px){
-    .boton-nav {
-        
-        height: 28px;
-        width: 50px;
-    }
-    /* body{
-        font-size: 20px;
-    } */
-    /* .estilo-section-div1{
-    grid-template-columns: 1fr;
-    grid-template-rows: 2fr;
-    }
-    .estilo-section-div2{
-    grid-template-columns: 1fr;
-    grid-template-rows: 2fr;
-    }
-    .crono-item{
-        width: 380px; ;
-   }
-   .grid-video{
-     height: 180px;
-   }
-}
-@media (max-width: 400px){
-    .crono-item{
-        width: 330px; ;
-   }
-   .portada-peli{
-    width: 100px;
-    height: 150px;
-   }
-   .grid-video{
-    height: 120px;
-  }
-}
-@media (max-width: 380px){
-    .portada-peli{
-        width: 80px;
-        height: 130px;
-    }
-    .crono-item{
-        width: 300px; 
-        font-size: 15px;
-   }
-   .table-thead-tr{
-    font-size: 18px;
-    }
-} */ 
-
-
-
+  background-color: black; }
