--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,66 @@
+* {
+  margin: 0;
+  padding: 0; }
+
+@font-face {
+  font-family: Marvel;
+  src: url("../assets/fonts/kenyan coffee rg.ttf");
+  font-style: normal; }
+
 body {
-  background-color: black; }
+  font-family: 'Marvel'; }
+
+.parallax {
+  background-image: url("../assets/images/Wallpaper.jpg");
+  background-size: 100%;
+  background-attachment: fixed; }
+
+.subtitulo {
+  background-color: rgba(255, 0, 0, 0.9);
+  background-image: radial-gradient(circle, red, black);
+  text-align: center;
+  font-size: 30px;
+  color: white; }
+
+h2 {
+  width: 100%; }
+
+.grid-logo {
+  display: grid;
+  background-color: black;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center; }
+
+.grid-logo-item {
+  height: 100%;
+  width: 70%; }
+
+.estilo-ul {
+  display: flex;
+  list-style: none;
+  justify-content: end;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  height: 35px;
+  background-color: rgba(0, 0, 0, 0.5); }
+
+.estilo-nav-li {
+  text-align: center;
+  font-size: 18;
+  margin: 2px;
+  padding: 2px;
+  border: solid; }
+
+.boton-nav {
+  background-color: rgba(0, 0, 0, 0);
+  text-decoration: none;
+  height: 20px;
+  width: 100px; }
+
+.estilo-a {
+  text-decoration: none;
+  color: black; }
