--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ h2 {
   margin-left: 20px;
   margin-right: 20px; }
 
-.grid-video {
+.grid__video {
   height: 350px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -117,8 +117,25 @@ h2 {
   justify-content: center;
   align-content: center;
   background-color: rgba(0, 0, 0, 0.5); }
+  .grid__video-item {
+    margin: 1px;
+    width: 80%;
+    height: 80%; }
 
-.grid-video-item {
-  margin: 1px;
-  width: 80%;
-  height: 80%; }
+.footer {
+  background-image: radial-gradient(circle, red, black);
+  text-align: center;
+  padding-top: 20px;
+  width: 100%;
+  height: 120px; }
+
+.estilo-a-footer {
+  width: 50px;
+  height: 50px;
+  transition: transform 0.3s; }
+
+.estilo-a-footer:hover {
+  transform: translateY(-15px); }
+
+h4 {
+  padding: 10px; }
