--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -48,7 +48,7 @@
     margin-right: 20px;
 }
 
-.grid-video{
+.grid__video{
     
     height: 350px;
     display: grid;
@@ -58,10 +58,14 @@
     justify-content: center;
     align-content: center;
     background-color: rgba(0, 0, 0, 0.5);
+
+&-item{ margin: 1px;
+    width: 80%;
+    height: 80%;}
 }
 
-.grid-video-item{
-    margin: 1px;
-    width: 80%;
-    height: 80%;
-}
+// .grid__video-item{
+//     margin: 1px;
+//     width: 80%;
+//     height: 80%;
+// }
