aplicacion de variables en header y footer

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     
-    background-image: radial-gradient(circle, red, black);
+    background-image: $bgGradiente;
     text-align: center;
     padding-top: 20px;
     width: 100%;
