--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,9 @@
 $bgRojo: rgba(255, 0, 0, 0.9);
 $bgGradiente:radial-gradient(circle, red, black);
 $bgHex:rgba(0, 0, 0, 0.5);
+$redesSociales:(
+    instagram: pink,
+    twitter: blue,
+    facebook: rgb(68, 68, 238),
+    whatsapp: green,
+);
