--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -57,6 +57,11 @@ h2{
      text-decoration: none;
      height: 20px;
      width: 100px;
+     transition: $transicion;
+
+     &:hover{
+        opacity: 0.5;
+     }
 }
 
 .btn-index {
