--- a/css/style.css
+++ b/css/style.css
@@ -114,13 +114,19 @@ h2 {
   height: 98%;
   width: 98%; }
 
-.texto-p {
-  padding-top: 15px;
-  background-color: rgba(0, 0, 0, 0.5);
+.texto1 {
+  padding: 15px;
+  background-color: rgba(250, 250, 250, 0.5);
+  color: rgba(247, 6, 6, 0.9);
+  font-size: 20px;
+  font-style: italic; }
+
+.texto2 {
+  padding: 15px;
+  background-color: rgba(243, 46, 46, 0.5);
   color: rgba(255, 255, 255, 0.9);
   font-size: 20px;
-  margin-left: 20px;
-  margin-right: 20px; }
+  font-style: italic; }
 
 .grid__video {
   height: 350px;
