--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -39,13 +39,31 @@
     height: 98%;
     width: 98%;
 }
-.texto-p {
-    padding-top: 15px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: rgba(255, 255, 255, 0.9);
-    font-size: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+// .texto-p {
+//     padding-top: 15px;
+//     background-color: rgba(0, 0, 0, 0.5);
+//     color: rgba(255, 255, 255, 0.9);
+//     font-size: 20px;
+//     margin-left: 20px;
+//     margin-right: 20px;
+// }
+
+@mixin texto-base ($colorFondo, $colorTexto) {
+     padding: 15px;
+     background-color: $colorFondo;
+     color: $colorTexto ;
+     font-size: 20px;
+     font-style: italic;
+        //  rgba(0, 0, 0, 0.5)
+    // rgba(255, 255, 255, 0.9)
+}
+
+.texto1{
+    @include texto-base(rgba(250, 250, 250, 0.5), rgba(247, 6, 6, 0.9));
+}
+
+.texto2{
+    @include texto-base(rgba(243, 46, 46, 0.5), rgba(255, 255, 255, 0.9));
 }
 
 .grid__video{
