--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,7 +2,7 @@
   
     display: grid;
     background-color: rgba(0, 0, 0, 0.5);
-    margin-left: 10px;
+    // margin-left: 10px;
     padding-top: 10px;
     grid-template-columns: 650px 450px;
     grid-template-rows: 1fr;
@@ -15,7 +15,7 @@
 .estilo-section-div2{
     display: grid;
     background-color: rgba(0, 0, 0, 0.5);
-    margin-left: 10px;
+    // margin-left: 10px;
     grid-template-columns: 275px 275px 550px;
     grid-template-rows: 1fr;
     justify-items: center;
