--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -15,8 +15,9 @@
     background-image: $bgGradiente;
     text-align: center;
     padding-top: 20px;
+    padding-bottom: 20px;
     width: 100%;
-    height: 120px;
+    height: 150px;
 
 }
 .estilo-a-footer{    
