--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,7 +2,6 @@
   
     display: grid;
     background-color: rgba(0, 0, 0, 0.5);
-    // margin-left: 10px;
     padding-top: 10px;
     grid-template-columns: 650px 450px;
     grid-template-rows: 1fr;
@@ -15,7 +14,6 @@
 .estilo-section-div2{
     display: grid;
     background-color: rgba(0, 0, 0, 0.5);
-    // margin-left: 10px;
     grid-template-columns: 275px 275px 550px;
     grid-template-rows: 1fr;
     justify-items: center;
@@ -39,14 +37,7 @@
     height: 98%;
     width: 98%;
 }
-// .texto-p {
-//     padding-top: 15px;
-//     background-color: rgba(0, 0, 0, 0.5);
-//     color: rgba(255, 255, 255, 0.9);
-//     font-size: 20px;
-//     margin-left: 20px;
-//     margin-right: 20px;
-// }
+
 
 @mixin texto-base ($colorFondo, $colorTexto) {
      padding: 15px;
@@ -54,8 +45,7 @@
      color: $colorTexto ;
      font-size: 20px;
      font-style: italic;
-        //  rgba(0, 0, 0, 0.5)
-    // rgba(255, 255, 255, 0.9)
+        
 }
 
 .texto1{
@@ -67,8 +57,8 @@
 }
 
 .grid__video{
-    
-    height: 350px;
+    padding: 2px;
+    // width: 90%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
@@ -82,8 +72,4 @@
     height: 80%;}
 }
 
-// .grid__video-item{
-//     margin: 1px;
-//     width: 80%;
-//     height: 80%;
-// }
+
