ajuste pagina cronologia

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -67,7 +67,7 @@
 }
 @media (max-width: 400px){
     .crono-item{
-        width: 330px; ;
+        width: 330px; 
    }
    .portada-peli{
     width: 100px;
@@ -83,6 +83,7 @@
         height: 130px;
     }
      .crono-item{
+        width: 280px;
         font-size: 18px;
     }
    .table-thead-tr{
