--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ h4 {
   padding-left: 5px; }
 
 .crono-item {
+  padding: 15px;
   height: 90%;
   width: 90%; }
 
@@ -238,6 +239,7 @@ h4 {
   font-size: 22; }
 
 .section-contacto {
+  background-color: rgba(255, 0, 0, 0.4);
   width: 100%;
   height: 500px; }
 
@@ -321,6 +323,7 @@ h4 {
     width: 80px;
     height: 130px; }
   .crono-item {
+    width: 280px;
     font-size: 18px; }
   .table-thead-tr {
     font-size: 18px; } }
