--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,9 +2,9 @@ $bgRojo: rgba(255, 0, 0, 0.9);
 $bgGradiente:radial-gradient(circle, red, black);
 $bgHex:rgba(0, 0, 0, 0.5);
 $redesSociales:(
-    instagram: pink,
-    twitter: blue,
-    facebook: rgb(68, 68, 238),
-    whatsapp: green,
+    instagram:#C13584,
+    twitter: #00ACEE,
+    facebook: #3B5998,
+    whatsapp: #25D366,
 );
 $transicion: all 0.3s;
