--- a/css/style.css
+++ b/css/style.css
@@ -104,24 +104,22 @@ h2 {
   height: 100%;
   width: 100%;
   transition: transform 0.3s; }
-
-.grid__item:hover {
-  transform: rotate(5deg); }
-
-.grid__item-img {
-  height: 98%;
-  width: 98%; }
+  .grid__item:hover {
+    transform: scale(0.9); }
+  .grid__item-img {
+    height: 98%;
+    width: 98%; }
 
 .texto1 {
   padding: 15px;
-  background-color: rgba(250, 250, 250, 0.5);
+  background-color: rgba(250, 250, 250, 0.8);
   color: rgba(247, 6, 6, 0.9);
   font-size: 20px;
   font-style: italic; }
 
 .texto2 {
   padding: 15px;
-  background-color: rgba(243, 46, 46, 0.5);
+  background-color: rgba(243, 46, 46, 0.8);
   color: rgba(255, 255, 255, 0.9);
   font-size: 20px;
   font-style: italic; }
@@ -144,25 +142,25 @@ h2 {
   margin: 0 5px;
   padding: 10px;
   border-radius: 15px;
-  background-color: pink; }
+  background-color: #C13584; }
 
 .link-twitter {
   margin: 0 5px;
   padding: 10px;
   border-radius: 15px;
-  background-color: blue; }
+  background-color: #00ACEE; }
 
 .link-facebook {
   margin: 0 5px;
   padding: 10px;
   border-radius: 15px;
-  background-color: #4444ee; }
+  background-color: #3B5998; }
 
 .link-whatsapp {
   margin: 0 5px;
   padding: 10px;
   border-radius: 15px;
-  background-color: green; }
+  background-color: #25D366; }
 
 .footer {
   background-image: radial-gradient(circle, red, black);
@@ -176,9 +174,8 @@ h2 {
   width: 50px;
   height: 50px;
   transition: transform 0.3s; }
-
-.estilo-a-footer:hover {
-  transform: translateY(-15px); }
+  .estilo-a-footer:hover {
+    transform: translateY(-15px); }
 
 h4 {
   padding: 10px; }
