--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -27,15 +27,15 @@
    height:100%;
    width: 100%;
    transition: transform 0.3s;
-}
 
-.grid__item:hover{
-    transform: rotate(5deg);
-}
+ &:hover{
+    transform:scale(0.9);
+   }
 
-.grid__item-img{
+ &-img{
     height: 98%;
     width: 98%;
+    }
 }
 
 
@@ -49,16 +49,15 @@
 }
 
 .texto1{
-    @include texto-base(rgba(250, 250, 250, 0.5), rgba(247, 6, 6, 0.9));
+    @include texto-base(rgba(250, 250, 250, 0.8), rgba(247, 6, 6, 0.9));
 }
 
 .texto2{
-    @include texto-base(rgba(243, 46, 46, 0.5), rgba(255, 255, 255, 0.9));
+    @include texto-base(rgba(243, 46, 46, 0.8), rgba(255, 255, 255, 0.9));
 }
 
 .grid__video{
     padding: 2px;
-    // width: 90%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
