cambio de logo, agrego padding y justifico texto en texto 1 y 2, elimino codigo comentado

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -47,6 +47,10 @@
    
 }
 @media (max-width: 650px){
+    .subtitulo{
+       font-size:  22px;
+    }
+
     .boton-nav { 
         height: 28px;
         width: 50px;
