--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,12 @@ body {
   background-color: rgba(255, 0, 0, 0.9);
   background-image: radial-gradient(circle, red, black);
   text-align: center;
-  font-size: 30px;
-  color: white; }
+  font-size: 30px; }
 
-h2 {
-  width: 100%; }
+h1 {
+  width: 100%;
+  color: white;
+  font-style: italic; }
 
 .grid-logo {
   display: grid;
@@ -37,7 +38,7 @@ h2 {
 
 .grid-logo-item {
   height: 100%;
-  width: 70%; }
+  width: 100%; }
 
 .estilo-ul {
   display: flex;
@@ -64,20 +65,21 @@ h2 {
     opacity: 0.5; }
 
 .btn-index {
-  background-color: aqua; }
+  background-color: #302e7c; }
 
 .btn-peliculas {
-  background-color: aquamarine; }
+  background-color: #453AA4; }
 
 .btn-cronologia {
-  background-color: cadetblue; }
+  background-color: #5C49C6; }
 
 .btn-contacto {
-  background-color: cornflowerblue; }
+  background-color: #7B6FDE; }
 
 .estilo-a {
   text-decoration: none;
-  color: black; }
+  color: #000000;
+  font-style: italic; }
 
 .estilo-section-div1 {
   display: grid;
@@ -115,14 +117,20 @@ h2 {
   background-color: rgba(250, 250, 250, 0.8);
   color: rgba(247, 6, 6, 0.9);
   font-size: 20px;
-  font-style: italic; }
+  font-style: italic;
+  padding-left: 4%;
+  padding-right: 4%;
+  text-align: justify; }
 
 .texto2 {
   padding: 15px;
   background-color: rgba(243, 46, 46, 0.8);
   color: rgba(255, 255, 255, 0.9);
   font-size: 20px;
-  font-style: italic; }
+  font-style: italic;
+  padding-left: 4%;
+  padding-right: 4%;
+  text-align: justify; }
 
 .grid__video {
   padding: 2px;
@@ -202,11 +210,13 @@ h4 {
 
 .table-tbody-tr {
   background-color: rgba(255, 0, 0, 0.7);
-  font-size: 20px; }
+  font-size: 20px;
+  color: white; }
 
 .table-tbody-tr2 {
   background-color: rgba(128, 128, 128, 0.5);
-  font-size: 20px; }
+  font-size: 20px;
+  color: white; }
 
 .h2-cronologia {
   color: white;
@@ -294,6 +304,8 @@ h4 {
     height: 150px; } }
 
 @media (max-width: 650px) {
+  .subtitulo {
+    font-size: 22px; }
   .boton-nav {
     height: 28px;
     width: 50px; }
