--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,12 +3,13 @@
     background-image: $bgGradiente;
     text-align: center;
     font-size: 30px;
+}
+h1{
+    width: 100%;  
     color: white;
+    font-style: italic;
 }
-h2{
-    width: 100%;
-    
-}
+
 .grid-logo{
     display: grid;
     background-color: black;
@@ -17,27 +18,24 @@ h2{
     justify-content: center;
     align-content: center;
     justify-items: center;
-    align-items: center;    
-   
+    align-items: center;     
 }
 
 .grid-logo-item{
     height: 100%;
-    width: 70%;
+    width: 100%;
 }
 
 .estilo-ul {
     display: flex;
     list-style: none;
     justify-content: end;
-
     padding-top: 4px;
     padding-bottom: 4px;
     height: 35px;
-    background-color: $bgHex;
-    
-   
+    background-color: $bgHex;  
 }
+
 .estilo-nav-li {
     text-align: center;
     font-size: 18;
@@ -45,44 +43,37 @@ h2{
     padding: 2px;
     border: solid;
 }
-// .boton-nav {
-//     background-color: rgba(0, 0, 0, 0);
-//     text-decoration: none;
-//     height: 20px;
-//     width: 100px;
-// }
 
-.btn-base{
-    
-     text-decoration: none;
-     height: 20px;
-     width: 100px;
-     transition: $transicion;
+.btn-base{ 
+    text-decoration: none;
+    height: 20px;
+    width: 100px;
+    transition: $transicion;
 
-     &:hover{
+    &:hover{
         opacity: 0.5;
-     }
+    }
 }
 
 .btn-index {
     @extend .btn-base;
-    background-color: aqua;
+    background-color:#302e7c;
 }
 .btn-peliculas{
     @extend .btn-base;
-    background-color: aquamarine;
+    background-color: #453AA4;
 }
 .btn-cronologia{
     @extend .btn-base;
-    background-color: cadetblue;
+    background-color: #5C49C6;
 }
 .btn-contacto{
     @extend .btn-base;
-    background-color: cornflowerblue;
+    background-color: #7B6FDE;
 }
-
 
 .estilo-a{
     text-decoration: none;
-    color: black;
+    color: #000000;
+    font-style: italic;
 }
