--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -40,20 +40,24 @@
 
 
 @mixin texto-base ($colorFondo, $colorTexto) {
-     padding: 15px;
-     background-color: $colorFondo;
-     color: $colorTexto ;
-     font-size: 20px;
-     font-style: italic;
-        
+    padding: 15px;
+    background-color: $colorFondo;
+    color: $colorTexto ;
+    font-size: 20px;
+    font-style: italic;
+    padding-left: 4%;
+    padding-right: 4%;
+    text-align: justify   
 }
 
 .texto1{
     @include texto-base(rgba(250, 250, 250, 0.8), rgba(247, 6, 6, 0.9));
+    
 }
 
 .texto2{
     @include texto-base(rgba(243, 46, 46, 0.8), rgba(255, 255, 255, 0.9));
+    
 }
 
 .grid__video{
