--- a/sass/_peliculas.scss
+++ b/sass/_peliculas.scss
@@ -6,8 +6,9 @@
 .section-table{
     background-color: rgba(0, 0, 0, 0.5);
 }
-
-
+h2{
+    color:  #ffffff;
+}
 
 .table{
     padding-bottom: 15px;
