--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -18,13 +18,14 @@ h1{
     justify-content: center;
     align-content: center;
     justify-items: center;
-    align-items: center;     
+    align-items: center;    
+    
+    &-item{
+        height: 100%;
+        width: 100%;
+    }
 }
 
-.grid-logo-item{
-    height: 100%;
-    width: 100%;
-}
 
 .estilo-ul {
     display: flex;
