--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,4 +1,7 @@
 @media (max-width:1100px) {
+    .estilo-section-crono{
+        font-size: 21px;
+    }
     .section-div1{
         grid-template-columns: 500px 300px;
     }
