--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -47,7 +47,8 @@ h1{
 
 .btn-base{ 
     text-decoration: none;
-    height: 20px;
+    color: #ffffff;
+    height: 25px;
     width: 100px;
     transition: $transicion;
 
@@ -70,11 +71,13 @@ h1{
 }
 .btn-contacto{
     @extend .btn-base;
-    background-color: #7B6FDE;
+    background-color: #6359c0;
 }
 
 .estilo-a{
     text-decoration: none;
-    color: #000000;
+    color: #ffffff;
+    font-size: 22px;
     font-style: italic;
+    font-weight: lighter;
 }
