correccion de imagenes en cronologia

--- a/sass/_cronologia.scss
+++ b/sass/_cronologia.scss
@@ -1,9 +1,9 @@
-.h2-cronologia{
+.h2-cronologia {
     color: rgb(255, 255, 255);
     font-size: 25px;
 }
 
-.estilo-section-crono{
+.estilo-section-crono {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
@@ -18,9 +18,9 @@
     padding-left: 5px;
 }
 
-.crono-item{
+.crono-item {
     padding: 20px;
     height: 90%;
-    width: 90%; ;
+    width: 90%;
+    ;
 }
-
