--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -8,11 +8,12 @@
     src: url('../assets/fonts/kenyan\ coffee\ rg.ttf');
     font-style: normal;
 }
+
 body {
-    font-family: 'Marvel'
+    font-family: 'Marvel';
 }
+
 .parallax {
-    
     background-image: url('../assets/images/Wallpaper.jpg');
     background-size: 100%;
     background-attachment: fixed;
