--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,8 @@ h1 {
 .btn-base, .btn-index, .btn-peliculas, .btn-cronologia, .btn-contacto {
   text-decoration: none;
   color: #ffffff;
-  height: 25px;
-  width: 100px;
+  height: 22px;
+  width: 95px;
   transition: all 0.3s; }
   .btn-base:hover, .btn-index:hover, .btn-peliculas:hover, .btn-cronologia:hover, .btn-contacto:hover {
     opacity: 0.5; }
@@ -79,7 +79,7 @@ h1 {
 .estilo-a {
   text-decoration: none;
   color: #ffffff;
-  font-size: 22px;
+  font-size: 20px;
   font-style: italic;
   font-weight: lighter; }
 
@@ -205,18 +205,14 @@ h2 {
 .table {
   padding-bottom: 15px;
   width: 80%;
+  color: #ffffff;
   margin-left: auto;
   margin-right: auto;
   text-align: center; }
 
-.table-thead-tr {
-  background-color: rgba(0, 0, 0, 0.3);
-  font-size: 22px;
-  color: rgba(255, 255, 255, 0.7); }
-
 .table-base, .tbody-tr, .tbody-tr2 {
   font-size: 20px;
-  color: white; }
+  color: #ffffff; }
 
 .tbody-tr {
   background-color: rgba(255, 0, 0, 0.7); }
@@ -288,9 +284,7 @@ h2 {
   .grid__video-item {
     margin: 1px;
     width: 90%;
-    height: 90%; }
-  .crono-item {
-    height: 400px; } }
+    height: 90%; } }
 
 @media (max-width: 768px) {
   .section-div1 {
@@ -325,11 +319,11 @@ h2 {
     grid-template-columns: 1fr;
     grid-template-rows: 2fr; }
   .grid__video {
-    height: 500px; } }
+    height: 500px; }
+  .estilo-a {
+    font-size: 18px; } }
 
 @media (max-width: 400px) {
-  .crono-item {
-    width: 330px; }
   .portada-peli {
     width: 100px;
     height: 150px; }
@@ -344,7 +338,6 @@ h2 {
     width: 80px;
     height: 130px; }
   .crono-item {
-    width: 280px;
     font-size: 18px; }
   .table-thead-tr {
     font-size: 18px; } }
