--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,16 +1,15 @@
-
-
-@each $nombre, $color in $redesSociales {
+@each $nombre,
+$color in $redesSociales {
     .link-#{$nombre} {
-    margin: 0 5px;
-    padding: 10px;
-    border-radius: 15px;
-    background-color: $color
+        margin: 0 5px;
+        padding: 10px;
+        border-radius: 15px;
+        background-color: $color
     }
 }
 
 .footer {
-    
+
     background-image: $bgGradiente;
     text-align: center;
     padding-top: 20px;
@@ -19,17 +18,18 @@
     height: 150px;
 
 }
-.estilo-a-footer{    
+
+.estilo-a-footer {
     width: 50px;
     height: 50px;
     transition: transform 0.3s;
 
-    &:hover{
+    &:hover {
         transform: translateY(-15px);
     }
 }
 
-h4{
+h4 {
     padding: 10px;
     font-size: 20px;
     color: #ffffff;
