--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,37 +1,37 @@
-.estilo-section-base{
+.estilo-section-base {
     display: grid;
-    background-color: rgba(0, 0, 0, 0.5);    
+    background-color: rgba(0, 0, 0, 0.5);
     grid-template-rows: 1fr;
     justify-items: center;
     align-items: center;
     justify-content: center;
     align-content: center;
-    padding-left: 5px;    
+    padding-left: 5px;
 }
 
-.section-div1{
-  @extend .estilo-section-base;
-    padding-top: 10px;    
-    grid-template-columns: 600px 400px;  
+.section-div1 {
+    @extend .estilo-section-base;
+    padding-top: 10px;
+    grid-template-columns: 600px 400px;
 }
 
-.section-div2{
-  @extend .estilo-section-base; 
-    grid-template-columns: 250px 250px 500px;  
+.section-div2 {
+    @extend .estilo-section-base;
+    grid-template-columns: 250px 250px 500px;
 }
 
-.grid__item{
-   height:100%;
-   width: 100%;
-   transition: transform 0.3s;
+.grid__item {
+    height: 100%;
+    width: 100%;
+    transition: transform 0.3s;
 
- &:hover{
-    transform:scale(0.9);
-   }
+    &:hover {
+        transform: scale(0.9);
+    }
 
- &-img{
-    height: 98%;
-    width: 98%;
+    &-img {
+        height: 98%;
+        width: 98%;
     }
 }
 
@@ -43,18 +43,18 @@
     font-style: italic;
     padding-left: 4%;
     padding-right: 4%;
-    text-align: justify   
+    text-align: justify
 }
 
-.texto1{
-    @include texto-base(rgba(250, 250, 250, 0.8), rgba(247, 6, 6, 0.9)); 
+.texto1 {
+    @include texto-base(rgba(250, 250, 250, 0.8), rgba(247, 6, 6, 0.9));
 }
 
-.texto2{
-    @include texto-base(rgba(243, 46, 46, 0.8), rgba(255, 255, 255, 0.9));   
+.texto2 {
+    @include texto-base(rgba(243, 46, 46, 0.8), rgba(255, 255, 255, 0.9));
 }
 
-.grid__video{
+.grid__video {
     padding: 2px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -64,9 +64,9 @@
     align-content: center;
     background-color: rgba(0, 0, 0, 0.5);
 
-&-item{ margin: 1px;
-    width: 80%;
-    height: 80%;}
+    &-item {
+        margin: 1px;
+        width: 80%;
+        height: 80%;
+    }
 }
-
-
