--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ h2 {
 .table {
   padding-bottom: 15px;
   width: 80%;
+  font-size: 25px;
   color: #ffffff;
   margin-left: auto;
   margin-right: auto;
