--- a/sass/_peliculas.scss
+++ b/sass/_peliculas.scss
@@ -19,6 +19,7 @@ h2 {
 .table {
     padding-bottom: 15px;
     width: 80%;
+    font-size: 25px;
     color: #ffffff;
     margin-left: auto;
     margin-right: auto;
