--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -77,6 +77,10 @@
     .estilo-a {
         font-size: 18px;
     }
+
+    .table {
+        font-size: 20px;
+    }
 }
 
 @media (max-width: 400px) {
